# spry-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_SCHEMA.md  Dockerfile  INSIGHTS_IDEAS.md  Makefile  README.md  SAMPLE_INSIGHTS.md  alembic.ini  app.yaml  demo_seed.sql  docker-compose.yml  function.py  main.py  pyproject.toml  requirements.txt  seed.py
spry_v2/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
spry_v2/migrations/versions/: 1_init_migration.py  2_add_calendar_tables.py
spry_v2/src/core/: config.py  events.py
spry_v2/src/core/database/: session.py
spry_v2/src/modules/: enums.py
spry_v2/src/modules/agenda/: model.py
spry_v2/src/modules/analytics/common/: calculator.py  schemas.py
spry_v2/src/modules/analytics/organization/: dependency.py  repository.py  router.py
spry_v2/src/modules/analytics/personal/: calculator.py  repository.py  router.py
spry_v2/src/modules/auth/: service.py
spry_v2/src/modules/calendar/: client.py  models.py  router.py  service.py  subscriber.py  tasks.py
spry_v2/src/modules/home/: router.py  schemas.py
spry_v2/src/modules/invitation/: events.py  exceptions.py  repository.py  router.py  schemas.py  service.py
spry_v2/src/modules/organization/: router.py  schemas.py
spry_v2/src/modules/organization_member/: schemas.py  service.py
spry_v2/src/modules/organization_team/: exceptions.py  model.py  repository.py
spry_v2/src/modules/permissions/: enums.py  service.py
spry_v2/src/modules/user/: exceptions.py  model.py  router.py
spry_v2/src/shared/: email.py
src/: main.py
(+222 files in other folders)
